# evidencepack

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: EXAMPLES.md  LIMITATIONS.md
evidencepack/: __init__.py  __main__.py  pack.py
tests/: test_evidencepack.py
