[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evidencepack"
version = "0.1.0"
description = "Reproducible receipts for claim checks — seal, verify, diff (stable canonical hashes)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["evidence", "reproducibility", "verification", "audit", "ai-safety", "claim-checking"]
dependencies = []

[project.scripts]
evidencepack = "evidencepack.__main__:main"

[tool.setuptools.packages.find]
include = ["evidencepack*"]
